# DocAI

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  setup.py  test.ipynb  web.config  workflow_graph.mmd
app/agents/EvaluationCriteriaAgent/: README.md  __init__.py
app/agents/GrammerAI/: main.py
app/agents/TenderSectionPlanner/: .env.example  .gitignore  README.md  Section_Planner_Constitution.md  Section_Planner_Specification.md  Section_Planner_User_Prompt.md  __init__.py  main.py  pyproject.toml
app/agents/TenderSectionPlanner/scripts/: __init__.py  align_section_planner_smoke_data.py
app/agents/TenderSectionPlanner/section_planner/: __init__.py  api.py  assembly.py  disposition.py  exceptions.py  llm.py  models.py  prompts.py  repository.py  service.py  settings.py  state.py  validation.py
app/agents/TenderSectionPlanner/tests/: __init__.py  test_api_contract.py  test_assembly.py  test_decision_normalization.py  test_llm.py  test_openai_integration.py  test_prompt_contract.py  test_repository.py  test_requirement_extraction.py  test_section_planner.py  test_semantic_refinement.py  test_smoke_alignment.py  test_source_adapter_regression.py
app/api/: router.py
app/infrastructure/: database.py  load_llms.py  logger.py  secrets.py  token_usage.py  token_usage_logger.py
app/utils/: helpers.py
tests/EvaluationCriteriaAgent/: __init__.py  test_api.py  test_configuration.py  test_persistence_and_usage.py
tests/GrammerAI/: test.md
tests/Section_writer/: tender-dashboard.html  test_agent2.py
tests/requirement_agent/: agent.py
(+147 files in other folders)
